contratCloudBeaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaver
spec:
  selector:
    matchLabels:
      app: beaver
  template:
    metadata:
      labels:
        app: beaver
    spec:
      containers:
      - name: beaver
        image: dbeaver/cloudbeaver:25.1.2
