serviceCloudBeaver.yaml
apiVersion: v1
kind: Service
metadata:
  name: beaver
spec:
  selector:
    app: beaver
  ports:
  - port: 80
    targetPort: 8978
